2002-04-06  Glenn Randers-Pehrson <randeg@alum.pri.edu>
  *  Added CCIS-601 4:2:2 YUV format read-write support.
  *  Added CCIS-601 4:2:2 MPEG-2 format write support.
  *  Fixed a bug introduced in 5.4.0 that caused files with "M2V"
     suffix to be written in MPEG-1 instead of MPEG-2 format.

2002-03-28  Cristy  <cristy@mystic.es.dupont.com>
  * ImageToBlob() only returned the first frame of a multi-frame image.

2002-04-05  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed inversion of colors when converting CMYk JPEG to PDF

2002-04-01  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Fixed TTF preview function.

2002-03-28  Cristy  <cristy@mystic.es.dupont.com>
  * DCM patches provided by Syam Gadde.
  * Multi-frame MPC image files caused a fault under Windows.
  * Copy entire comment from SVG (bug report from Bob Friesenhahn).
  * Enlarged scanline buffer for JPEG-compressed TIFF's (bug report from
    Bob Friesenhahn).

2002-03-27  Cristy  <cristy@mystic.es.dupont.com>
  * ImageMagick, version 5.4.4, released.

2002-03-26  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
  * Added preliminary version of C API for vector drawing commands
    (draw.h & draw.c).  This interface is subject to change, and has not
    even been tested yet so it should not be used to support production
    code.  The previous draw.h and draw.c have been renamed to render.h
    and render.c respectively.

2002-03-25  Leonard Rosenthol  <leonardr@lazerware.com>
  * Fixed bugs related to layered CMYK PSD images.

2002-03-13  Leonard Rosenthol  <leonardr@lazerware.com>
  * PSD coder now saves layer information (name, offset & opacity)
    in hidden attributes.

2002-03-13  Cristy  <cristy@mystic.es.dupont.com>
  * Enhanced MPC to read/write image sequences.

2002-03-13  Cristy  <cristy@mystic.es.dupont.com>
  * A number of formats (e.g. JPEG, PS) did not handle DirectClass
    grayscale images properly.

2002-03-12  Cristy  <cristy@mystic.es.dupont.com>