@@ -1,3 +1,6 @@
+2002-04-08  Cristy  <cristy@mystic.es.dupont.com>
+  * Added MagickFatalError() and SetFatalErrorHandler() to the C API.
+
 2002-04-06  Glenn Randers-Pehrson <randeg@alum.pri.edu>
   *  Added CCIS-601 4:2:2 YUV format read-write support.
   *  Added CCIS-601 4:2:2 MPEG-2 format write support.
